# personal-cmake-template

./: .clang-tidy  CMakeLists.txt
cmake/: AddTestExecutable.cmake  SetTargetDefaults.cmake  dependencies.cmake
src/: CMakeLists.txt
src/game/: CMakeLists.txt  main.cc  printer.cc  printer.hh
src/game_lib/: CMakeLists.txt  adder.cc  adder.hh  printer.cc  printer.hh
src/math/: CMakeLists.txt  adder.hh
tests/: CMakeLists.txt  test_adder.cc  test_printer.cc
tests/game_lib/: CMakeLists.txt
tests/game_lib_tests/: CMakeLists.txt  test_printer.cc
